# QNX-Bridge-OTA

./: .gitignore  .gitmodules  README.md
Apps/CommonAPI-FileTF-ubuntu/fidl/: FileTransfer.fdepl  FileTransfer.fidl
Apps/CommonAPI-FileTF-ubuntu/src/: FileTransferServer.cpp
Apps/CommonAPI-FileTF-ubuntu/src-gen/core/v0/filetransfer/example/: FileTransferStubDefault.hpp
Apps/CommonAPI-FileTF-ubuntu/src-gen/someip/v0/filetransfer/example/: FileTransferSomeIPDeployment.hpp  FileTransferSomeIPProxy.hpp
Apps/CommonAPI-ubunt-rpi4/config/server/: vsomeip.json
Apps/CommonAPI-ubunt-rpi4/src-gen/someip/v0/commonapi/examples/: HelloWorldSomeIPCatalog.json
Apps/CommonAPI-ubunt-rpi4/src/client/: CMakeLists.txt  HelloWorldClient.cpp
Apps/CommonAPI-ubunt-rpi4/src/service/: CMakeLists.txt  HelloWorldStubImpl.hpp
Apps/HelloCommonAPI-ubuntu/: CMakeLists.txt
Apps/HelloCommonAPI-ubuntu/fidl/: HelloWorld.fdepl  HelloWorld.fidl
Apps/HelloCommonAPI-ubuntu/src/: HelloWorldClient.cpp  HelloWorldService.cpp
Apps/HelloCommonAPI-ubuntu/src-gen/someip/v0/commonapi/examples/: HelloWorldSomeIPDeployment.cpp
Apps/commonapi-server-qnx/: CMakeLists.txt  vsomeip.json
Apps/commonapi-server-qnx/fidl/: HelloWorld.fdepl
Apps/commonapi-server-qnx/src/: HelloWorldStubImpl.cpp
Apps/commonapi-server-qnx/src-gen/someip/v0/commonapi/examples/: HelloWorldSomeIPStubAdapter.cpp  HelloWorldSomeIPStubAdapter.hpp
Apps/vsomeip-server-qnx/: CMakeLists.txt  service.json
Apps/vsomeip_rpi_ubuntu/: Makefile
CommonAPI-FileTF-ubuntu/: CMakeLists.txt  vsomeip.json
CommonAPI-FileTF-ubuntu/data/server/: QNX_NETWORK_CONFIG.md
CommonAPI-FileTF-ubuntu/src/: FileTransferClient.cpp  FileTransferServer.cpp
CommonAPI-FileTF-ubuntu/src-gen/core/v0/filetransfer/example/: FileTransfer.hpp  FileTransferProxy.hpp  FileTransferProxyBase.hpp  FileTransferStub.hpp
CommonAPI-FileTF-ubuntu/src-gen/someip/v0/filetransfer/example/: FileTransferSomeIPProxy.cpp  FileTransferSomeIPStubAdapter.hpp
CommonAPI-Patchs/someip-runtime/: 0003-someip-qnx-src-compat.patch
CommonAPI-QNX-OTA/: CMakeLists.txt  commonapi4someip.ini  vsomeip.json
CommonAPI-QNX-OTA/fidl/: FileTransfer.fdepl  FileTransfer.fidl
CommonAPI-QNX-OTA/src/: FileTransferClient.cpp  FileTransferServer.cpp
CommonAPI-ubunt-rpi4/config/client/: vsomeip.json
CommonAPI-ubunt-rpi4/src-gen/someip/v0/commonapi/examples/: HelloWorldSomeIPProxy.cpp
HelloCommonAPI-ubuntu/src-gen/someip/v0/commonapi/examples/: HelloWorldSomeIPProxy.hpp
QNX-CommonAPI-Lib-Patchs/: toolchain-qnx.cmake
QNX-CommonAPI-Lib-Patchs/core-runtime/: 0001-qnx-core-runtime-cmake.patch
QNX-CommonAPI-Lib-Patchs/someip-runtime/: 0001-qnx-someip-runtime-cmake.patch  0002-someip-qnx-header-compat.patch
QNX-Ota-Server/: CMakeLists.txt
QNX-Ota-Server/src/: FileTransferServer.cpp
commonapi-server-qnx/src-gen/someip/v0/commonapi/examples/: HelloWorldSomeIPDeployment.hpp
docs/: vsomeip-install-linux.md  vsomeip-install-qnx(vmware).md  vsomeip-install-yocto.md
docs/CommonAPI/: 01_commonapi-core-guide.md  05_commonapi-core-runtime-install-qnx.md  06_install-commonapi-someip-runtime-qnx.md  07_commonapi-helloworld-app-qnx.md  commonapi-guide-advanced.md  commonapi-helloWorldApp-ubuntu.md  commonapi-install-ubuntu.md
docs/QNX/: OS-installation-guide-VM.md  qnx_dev_run_applications.md
docs/SOME-IP/: 01_overview.md  02_message_header.md  03_serial_dataStructures.md  04_transport_bindings.md  05_communications_types.md  SOME-IP-FullGuide.md
docs/SOME-IP/.obsidian/: workspace.json
docs/Service-Discovery/: 01_Introduction.md  02_message_format.md  03_SD_entry_types.md  04_messages_over_system.md  SOME-IP-SD_fullGuide.md
docs/System-Requirements/: system_requirements.md
docs/vsomeip-lib/: 03_vsomeip-2device-communication.md  04_vsomeip-install-qnx(vmware).md
ota-update-tool/: CMakeLists.txt  ota-apply.cpp
vsomeip/: vsomeip_app_qnx.md
vsomeip_example_local/: CMakeLists.txt
vsomeip_example_local/client/src/: client-example.cpp
vsomeip_example_local/server/src/: service-example.cpp
vsomeip_rpi_ubuntu/: CMakeLists.txt  service.json
vsomeip_server_remote/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
